# auth/handlers.go
@@ -28,7 +28,8 @@ func (h *Handler) register(c *gin.Context) {
 		core.ApiErrorResponse(c, http.StatusBadRequest, ErrInvalidCredentials.Error())
 		return
 	}
-	usr, err := h.us.CreateUser(credentials.Email, credentials.Name, credentials.Password)
+	usr, err := h.us.CreateUser(credentials.Email, credentials.FirstName, credentials.LastName,
+		credentials.Gender, credentials.Age, credentials.Password)
 	// TODO: now we do not have adequate way to check unique keys violation; fix it in future
 	if err != nil {
 		core.ApiErrorResponse(c, http.StatusBadRequest, "already exists")
